???, ??? ??, 2003 - xdebug 1.3.0

+ Implemented the "show-local" command (shows all local variables in the
  current scope including all contents). (Derick)
+ Implemented conditions for breakpoints in the "break" command. (Derick)


Mon, Apr 21, 2003 - xdebug 1.2.0

= Fixed compilation on MacOSX. (Derick)


Tue, Apr 15, 2003 - xdebug 1.2.0rc2

= Fixed handling Windows paths in the debugger. (Derick)
= Fixed getting zvals out of Zend Engine 2. (Derick)


Sun, Apr 6, 2003 - xdebug 1.2.0rc1

+ Added code coverage functions to check which lines and how often they were
  touched during execution. (Derick)
+ Made Xdebug compatible with Zend Engine 2. (Derick)
+ Added dumping of super globals on errors. (Harald Radi)
+ Added XML protocol for the debugger client. (Derick)
= Fixed handling of "continue" (so that it also continues with the script).
  (Derick)
+ Additions to the remote debugger: "eval" (evaluate any PHP code from the
  debugger client). (Derick)
+ Added profiling support to xdebug. This introduces 3 new functions,
  xdebug_start_profiling() that begins profiling process, 
  xdebug_stop_profiling() that ends the profiling process and
  xdebug_dump_function_trace() that dumps the profiling data. (Ilia)
+ Implemented the "kill" (kills the running script) and "delete" (removes
  a breakpoint on a specified element) command. (Derick)


Wed Nov 11, 2002 - xdebug 1.1.0

+ Implemented the "list" (source listing), "print" (printing variable
  contents), "show" (show all variables in the scope), "step" (step through
  execution), "pwd" (print working directory), "next" (step over) and "finish"
  (step out) commands for the remote debugger. (Derick)
= Fixed lots of small bugs, under them memory leaks and crash bugs. (Derick)
= Parameters to functions are no longer recorded by default; use the
  xdebug.collect_params=1 setting in php.ini to turn it on again.


Tue Oct 29, 2002 - xdebug 1.1.0pre2

+ Implemented class::method, object->method and file.ext:line style